Haiku platform support. Fixes in same time openal build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -143,6 +143,9 @@ if( NOT WIN32 )
     if (${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
        set(Bsd 1)
     endif()
+    if (${CMAKE_SYSTEM_NAME} MATCHES "Haiku")
+       set(Haiku 1)
+    endif()
     set (NOT_DWORD_DEFINED 1)
     if (NOT DISABLE_MALIGN_DOUBLE) #Only compile with -malign-double if not told to disable. Pass via command line flags.
       set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -malign-double")
@@ -393,7 +396,7 @@ if (GAME_ENABLED)
     if (APPLE)
       target_link_libraries(barony ${GLUT_LIBRARIES} ${PROJECT_SOURCE_DIR}/libpng16.16.dylib) #Wait...what? if(APPLE) in if(WIN32)? What was I thinking back then, haha.
     endif()
-    if (${CMAKE_SYSTEM_NAME} MATCHES "BSD")
+    if (${CMAKE_SYSTEM_NAME} MATCHES "BSD" OR ${CMAKE_SYSTEM_NAME} STREQUAL "Haiku")
       # For backtrace
       find_path(EXECINFO_INC NAMES execinfo.h)
       find_library(EXECINFO_LIB NAMES execinfo)
@@ -403,7 +406,12 @@ if (GAME_ENABLED)
   endif()
   target_link_libraries(barony ${OPENGL_LIBRARIES})
   target_link_libraries(barony ${THREADS_LIBRARIES})
-  target_link_libraries(barony -lm -lc)
+  target_link_libraries(barony -lm)
+  if (NOT CMAKE_SYSTEM_NAME MATCHES "Haiku")
+	  target_link_libraries(barony -lc)
+  else()
+	  target_link_libraries(barony -lroot)
+  endif()
   if( NOT WIN32 AND NOT APPLE)
     #Remember, Windows and Mac aren't using find_package for FMOD and PNG.
     target_link_libraries(barony ${PNG_LIBRARY})
@@ -502,7 +510,12 @@ if (EDITOR_ENABLED)
   endif()
   target_link_libraries(${EDITOR_EXE_NAME} ${OPENGL_LIBRARIES})
   target_link_libraries(${EDITOR_EXE_NAME} ${THREADS_LIBRARIES})
-  target_link_libraries(${EDITOR_EXE_NAME} -lm -lc)
+  target_link_libraries(${EDITOR_EXE_NAME} -lm)
+  if (NOT CMAKE_SYSTEM_NAME MATCHES "Haiku")
+	  target_link_libraries(${EDITOR_EXE_NAME} -lc)
+  else()
+	  target_link_libraries(${EDITOR_EXE_NAME} -lroot)
+  endif()
   # We need to link to Winsock if we're on Windows
   if( NOT WIN32 AND NOT APPLE)
     #Remember, Windows and Mac aren't using find_package for FMOD and PNG.
