Simplifying SDL2 ttf lookup too

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,7 +145,7 @@ if( NOT WIN32 )
     if (${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
        set(Bsd 1)
     endif()
-    if (${CMAKE_SYSTEM_NAME} MATCHES "Haiku")
+    if (${CMAKE_SYSTEM_NAME} STREQUAL "Haiku")
        set(Haiku 1)
     endif()
     set (NOT_DWORD_DEFINED 1)
