remove some remaining references to "scripts" fix a few straggling issues
Signed-off-by: SheridanR <sheridan.rathbun@gmail.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -141,6 +141,7 @@ list(APPEND EDITOR_SOURCES
 
 add_subdirectory(magic)
 add_subdirectory(interface)
+add_subdirectory(ui)
 
 set(GAME_SOURCES ${GAME_SOURCES} PARENT_SCOPE)
 set(EDITOR_SOURCES ${EDITOR_SOURCES} PARENT_SCOPE)
