fix missing entry for GameUI.cpp in cmakelists
Signed-off-by: SheridanR <sheridan.rathbun@gmail.com>

--- a/src/ui/CMakeLists.txt
+++ b/src/ui/CMakeLists.txt
@@ -7,6 +7,7 @@ list(APPEND GAME_SOURCES
 	"${CMAKE_CURRENT_SOURCE_DIR}/Slider.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/Text.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/Widget.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/GameUI.cpp"
 )
 list(APPEND EDITOR_SOURCES
 	"${CMAKE_CURRENT_SOURCE_DIR}/Button.cpp"
