Trigger CI on develop too

--- a/.github/workflows/build-linux_fmod_steam.yml
+++ b/.github/workflows/build-linux_fmod_steam.yml
@@ -6,9 +6,9 @@ name: Linux-CI_fmod_steam
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [ master, develop ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, develop ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
