* I think Apple build is fixed? Maybe? (Non-dev test machine when)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -279,15 +279,15 @@ if (OPENAL_ENABLED)
 endif()
 
 find_package(Threads REQUIRED)
+if (FMOD_ENABLED)
+	find_package(FMOD REQUIRED)
+	if (FMOD_FOUND)
+		set(FMOD 1)
+	endif()
+endif()
 if(NOT APPLE)
   #Linux needs these two.
   #Macs have their own special line.
-  if (FMOD_ENABLED)
-	find_package(FMOD)
-	if (FMOD_FOUND)
-	  set(FMOD 1)
-	endif()
-  endif()
   find_package(PNG REQUIRED)
 elseif (APPLE)
   set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${FMOD_CXX_FLAGS}")
@@ -319,19 +319,13 @@ endif()
 # Add include directories
 #include_directories(${GLM_INCLUDE_DIR})
 if( NOT WIN32 )
-  include_directories(${THREADS_INCLUDE_DIR})
+ 	include_directories(${THREADS_INCLUDE_DIR})
 endif()
 if(NOT APPLE)
-  #Remember, Mac doesn't have find_package for fmod and png.
-  if (FMOD_FOUND)
+ 	include_directories(${PNG_INCLUDE_DIR})
+endif()
+if (FMOD_FOUND)
 	include_directories(${FMOD_INCLUDE_DIR})
-  endif()
-  include_directories(${PNG_INCLUDE_DIR})
-elseif (APPLE)
-  if (FMOD_ENABLED)
-	include_directories("${PROJECT_SOURCE_DIR}/libraries/fmod/inc")
-	link_directories("${PROJECT_SOURCE_DIR}/libraries/fmod/lib")
-  endif()
 endif()
 
 # Add the source directory
@@ -371,17 +365,13 @@ if (APPLE)
   set(COPY_FRAMEWORKS ${PROJECT_SOURCE_DIR}/../Frameworks/SDL.framework ${PROJECT_SOURCE_DIR}/../Frameworks/SDL_image.framework ${PROJECT_SOURCE_DIR}/../Frameworks/SDL_mixer.framework ${PROJECT_SOURCE_DIR}/../Frameworks/SDL_net.framework)
   message("{COPY_FRAMEWORKS}: ${COPY_FRAMEWORKS}")
   if (FMOD_ENABLED)
-	SET_SOURCE_FILES_PROPERTIES(libfmodex.dylib PROPERTIES MACOSX_PACKAGE_LOCATION MacOS)
+	SET_SOURCE_FILES_PROPERTIES(libfmod.dylib PROPERTIES MACOSX_PACKAGE_LOCATION MacOS) # TODO: Use ${FMOD_LIBRARY} instead?
   endif()
   #add_executable(barony MACOSX_BUNDLE OSX/SDLmain.m ${GAME_SOURCES} ${COPY_FRAMEWORKS} ${BOOK_FILES} ${IMAGE_FILES} ${ITEM_FILES} ${MAP_FILES} ${MODEL_FILES} ${MUSIC_FILES} ${SOUND_FILES} libfmodex.dylib)
   #add_executable(barony MACOSX_BUNDLE OSX/SDLmain.m ${GAME_SOURCES} ${COPY_FRAMEWORKS} libfmodex.dylib /opt/local/lib/libpng16.16.dylib)
   #add_executable(barony MACOSX_BUNDLE OSX/SDLmain.m ${GAME_SOURCES} ${MACOSX_BUNDLE_ICON_FILE} libfmodex.dylib /opt/local/lib/libpng16.16.dylib)
   if (GAME_ENABLED)
-	if (FMOD_ENABLED)
-	  add_executable(barony MACOSX_BUNDLE ${GAME_SOURCES} ${MACOSX_BUNDLE_ICON_FILE} libfmodex.dylib ${PROJECT_SOURCE_DIR}/libpng16.16.dylib)
-	else()
-	  add_executable(barony MACOSX_BUNDLE ${GAME_SOURCES} ${MACOSX_BUNDLE_ICON_FILE} ${PROJECT_SOURCE_DIR}/libpng16.16.dylib)
-	endif(FMOD_ENABLED)
+	add_executable(barony MACOSX_BUNDLE ${GAME_SOURCES} ${MACOSX_BUNDLE_ICON_FILE} ${PROJECT_SOURCE_DIR}/libpng16.16.dylib)
   #add_executable(barony OSX/SDLmain.m ${GAME_SOURCES})
   #add_executable(barony ${GAME_SOURCES})
   #SET_SOURCE_FILES_PROPERTIES(${COPY_FRAMEWORKS} PROPERTIES MACOSX_PACKAGE_LOCATION Frameworks)
@@ -457,16 +447,15 @@ if (GAME_ENABLED)
   if (NOT CMAKE_SYSTEM_NAME MATCHES "Haiku")
 	  target_link_libraries(barony -lc)
   endif()
+  if (FMOD_FOUND)
+    target_link_libraries(barony ${FMOD_LIBRARY})
+  endif()
+  target_link_libraries(barony ${PHYSFS_LIBRARY})
   if(NOT APPLE)
-	#Remember, Mac isn't using find_package for FMOD and PNG.
+	#Remember, Mac isn't using find_package for PNG.
 	target_link_libraries(barony ${PNG_LIBRARY})
-	target_link_libraries(barony ${PHYSFS_LIBRARY})
-	if (FMOD_FOUND)
-	  target_link_libraries(barony ${FMOD_LIBRARY})
-	endif()
   endif()
   if (APPLE)
-	target_link_libraries(barony ${PHYSFS_LIBRARY})
 	target_link_libraries(barony ${IOKit_LIBRARY})
   endif()
   # We need to link to Winsock if we're on Windows
@@ -474,11 +463,6 @@ if (GAME_ENABLED)
 	target_link_libraries(barony wsock32 ws2_32)
 	#target_link_libraries(barony -lpng -lfmodex) Mingw, not Visual Studio.
   endif()
-  if(APPLE)
-	if (FMOD_ENABLED)
-	  target_link_libraries(barony -lfmodex) #Finally manually link fmod for mac.
-	endif()
-  endif(APPLE)
   target_link_libraries(barony ${EXTRA_LIBS}) #Apple needs this for OpenGL to work.
 
   if (OPENAL)
@@ -522,11 +506,7 @@ if (EDITOR_ENABLED)
 	#set(MACOSX_BUNDLE_ICON_FILE "${PROJECT_SOURCE_DIR}/editor.icns")
 	#add_executable(editor MACOSX_BUNDLE OSX/SDLmain.m ${EDITOR_SOURCES} ${COPY_FRAMEWORKS} libfmodex.dylib  /opt/local/lib/libpng16.16.dylib)
 	#add_executable(editor MACOSX_BUNDLE OSX/SDLmain.m ${EDITOR_SOURCES} libfmodex.dylib  /opt/local/lib/libpng16.16.dylib)
-	if (FMOD_ENABLED)
-	  add_executable(${EDITOR_EXE_NAME} MACOSX_BUNDLE ${EDITOR_SOURCES} libfmodex.dylib ${PROJECT_SOURCE_DIR}/libpng16.16.dylib)
-	else()
-	  add_executable(${EDITOR_EXE_NAME} MACOSX_BUNDLE ${EDITOR_SOURCES} ${PROJECT_SOURCE_DIR}/libpng16.16.dylib)
-	endif()
+	add_executable(${EDITOR_EXE_NAME} MACOSX_BUNDLE ${EDITOR_SOURCES} ${PROJECT_SOURCE_DIR}/libpng16.16.dylib)
 	#SET_SOURCE_FILES_PROPERTIES(${MACOSX_BUNDLE_ICON_FILE} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
 	set_source_files_properties(${EDITOR_SOURCES} PROPERTIES COMPILE_FLAGS "-x objective-c++")
   else()
@@ -555,13 +535,13 @@ if (EDITOR_ENABLED)
 	  target_link_libraries(${EDITOR_EXE_NAME} -lc)
   endif()
   # We need to link to Winsock if we're on Windows
+  if (FMOD_FOUND)
+    target_link_libraries(${EDITOR_EXE_NAME} ${FMOD_LIBRARY})
+  endif()
   if(NOT APPLE)
 	#Remember, Mac isn't using find_package for FMOD and PNG.
 	target_link_libraries(${EDITOR_EXE_NAME} ${PHYSFS_LIBRARY})
 	target_link_libraries(${EDITOR_EXE_NAME} ${PNG_LIBRARY})
-	if (FMOD_FOUND)
-	  target_link_libraries(${EDITOR_EXE_NAME} ${FMOD_LIBRARY})
-	endif()
   endif()
   if (APPLE)
 	target_link_libraries(${EDITOR_EXE_NAME} ${PHYSFS_LIBRARY})
