Made editor target ignore the EOS_ENABLED flag and override it
We don't support EOS with the editor currently.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -123,6 +123,7 @@ list(APPEND EDITOR_SOURCES
 	"${CMAKE_CURRENT_SOURCE_DIR}/steam_shared.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/json.cpp"
 	#"${CMAKE_CURRENT_SOURCE_DIR}/eos.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/eos_editor.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/mod_tools.cpp"
 )
 
