* Failed experiment to incorporate STB TTF with SDL

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -131,6 +131,7 @@ add_subdirectory(magic)
 add_subdirectory(interface)
 add_subdirectory(ui)
 add_subdirectory(engine)
+add_subdirectory(external)
 
 set(GAME_SOURCES ${GAME_SOURCES} PARENT_SCOPE)
 set(EDITOR_SOURCES ${EDITOR_SOURCES} PARENT_SCOPE)
